# evoclaw

./: .gitignore  .golangci.yml  AGENTS.md  CHAINS_DEMO.md  CHANGELOG.md  COVERAGE_REPORT.md  Containerfile  GENOME_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  MQTT-TOOL-RESULT-DELIVERY-SUMMARY.md  Makefile  PR_DESCRIPTION.md  README.md  agents_cov.out  api_cov.out  assets.go  chan_cov.out  cmd_coverage.out  config_cov.out  config_coverage.html  coverage.html  coverage.out  coverage_core.out  docker-compose.dev.yml  docker-compose.yml  evoclaw.example.json  evoclaw.json  generate_icons.py  go.mod  go.sum  install.sh  llms-full.txt  llms.txt  orch_cov.out  orch_coverage.out  orchestrator.Containerfile  podman-compose.dev.yml  podman-compose.yml  test-output.txt  (+1 more)
android/: README.md  build.gradle  settings.gradle
contracts/: AgentRegistry.sol
demo/: README.md  app.js  index.html  style.css
deploy/: deploy-local.js  deploy.js  deployment-local.json  deployment.json  hardhat.config.js  package-lock.json  package.json  podman-pod.sh
docker/: mosquitto.conf
docs/: AGENTIC-TOOL-LOOP-IMPLEMENTATION.md  AGENTIC-TOOL-LOOP.md  ARCHITECTURE.md  CHAIN-CLI.md  CLAWCHAIN-AUTO-DISCOVERY-TESTS.md  CLOUD-SYNC.md  (+35 more)
edge-agent/: COVERAGE_90PCT.md  Cargo.toml  Containerfile  README.md  TESTING_COMPLETE.md  TEST_COVERAGE.md  agent.example.toml
edge-agent/.cargo/: config.toml
edge-agent/docs/: TESTNET.md
edge-agent/scripts/: hl_sign.py
edge-agent/src/: agent.rs  commands.rs  config.rs  evolution.rs  firewall.rs  genome.rs  join.rs  lib.rs  llm.rs  main.rs  metrics.rs  monitor.rs  mqtt.rs  paper.rs  risk.rs  security.rs  session.rs  signing.rs  strategy.rs  tools.rs  trading.rs  wal.rs
edge-agent/src/skills/: clawchain.rs  gpio.rs  mod.rs  price_monitor.rs  registry.rs  system_monitor.rs
edge-agent/tests/: integration_test.rs
(+390 files in other folders)
